RESOLVED FIXED158878
Ignore case in the check for security origin inheritance
https://bugs.webkit.org/show_bug.cgi?id=158878
Summary Ignore case in the check for security origin inheritance
John Wilander
Reported 2016-06-17 10:57:34 PDT
We should allow e.g. about:BLANK, about:blAnk and about:SRcDOC to be treated as about:blank and about:srcdoc when we check for security origin inheritance.
Attachments
Patch (4.67 KB, patch)
2016-06-17 11:33 PDT, John Wilander
no flags
John Wilander
Comment 1 2016-06-17 11:33:14 PDT
WebKit Commit Bot
Comment 2 2016-06-17 12:50:47 PDT
Comment on attachment 281570 [details] Patch Clearing flags on attachment: 281570 Committed r202174: <http://trac.webkit.org/changeset/202174>
WebKit Commit Bot
Comment 3 2016-06-17 12:50:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.