Source/WebCore/platform/URL.cpp
@@ -2065,8 +2065,8 @@ bool URL::isBlankURL() const
 bool URL::shouldInheritSecurityOriginFromOwner() const
 {
     return isEmpty()
-        || m_string == blankURL().string()
-        || m_string == "about:srcdoc";
+        || equalIgnoringASCIICase(m_string, blankURL().string())
+        || equalLettersIgnoringASCIICase(m_string, "about:srcdoc");
 }
 
 typedef HashMap<String, unsigned short, ASCIICaseInsensitiveHash> DefaultPortsMap;
